--- a/WikiLeaks/Properties/Resources.resx
+++ b/WikiLeaks/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="Wikileaks" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Wikileaks.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="WikiLeaks1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WikiLeaks.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
